# internal/model/rack.go
@@ -1,8 +1,9 @@
 package model
 
 type Rack struct {
-	RackID   int    `json:"rak_id"`
-	RackName string `json:"rak_name"`
+	RackID      int    `json:"rak_id"`
+	RackName    string `json:"rak_name"`
+	InspectorID int    `json:"rak_inspector_id"`
 }
 
 type RackProgress struct {
